# python-flask-auth-api

./: .env  .gitignore  Dockerfile  README.md  cookiecutter.json  docker-compose.yaml  launcher.sh  pyproject.toml  settings.toml
base_app/: app.py  models.py  schemas.py  wsgi.py
base_app/blueprints/restapi/: __init__.py  auth.py  resources.py  user.py
base_app/ext/: commands.py  swagger.py
base_app/static/: swagger.json
base_app/tests/: conftest.py
{{ cookiecutter.__package_name }}/: app.py  models.py
{{ cookiecutter.__package_name }}/blueprints/restapi/: resources.py
{{ cookiecutter.__package_name }}/ext/: commands.py
{{ cookiecutter.__package_name }}/tests/: conftest.py
